# SolarEnergy_Chier

./: .gitignore  CMakeLists.txt  README.md  main.cpp
InputFiles/6282fields/: 6282_QMCRT.scn  6282_configure.json
InputFiles/CodeTest/: FlatHelioRectangleReceiver.json  FlatHelioRectangleReceiver.scn  FlatRect2.json  FlatRect2.scn
InputFiles/CompleteInputFilesExample/: twoReceiverConfiguration.json  twoReceiverScene.scn
InputFiles/FocusFlatRectangleHeliostatInputs/: focusflat_example_2x4_scene.scn  focusflat_example_configuration.json  focusflat_example_scene.scn
InputFiles/PS10_typical/: PS10_2_typical_4x7_scene.scn  PS10_2_typical_configuration.json  PS10_typical_4x7_heliostats_index.txt  PS10_typical_4x7_scene.scn  PS10_typical_configuration.json  PS10_typical_scene.scn
InputFiles/PS10_typical_subhelio/: PS10_typical_4x7_subhelio_scene.scn
InputFiles/example/: example_configuration.json  example_scene.scn
QuasiMonteCarloRayTracing/: CMakeLists.txt  CylinderReceiverRectangleGridRayTracing.cu  CylinderReceiverRectangleGridRayTracing.cuh  QuasiMonteCarloRayTracer.cpp  QuasiMonteCarloRayTracer.h  RayTracingArgumentStruct.h  RectangleReceiverRectangleGridRayTracing.cu  RectangleReceiverRectangleGridRayTracing.cuh
QuasiMonteCarloRayTracing/Grid/: rectGridDDA.cu  rectGridDDA.cuh
QuasiMonteCarloRayTracing/Receiver/: cylinderReceiverIntersection.cu  cylinderReceiverIntersection.cuh  receiverIntersectionUtil.cuh  rectangleReceiverIntersection.cu  rectangleReceiverIntersection.cuh
RayTracingPipeline/: CMakeLists.txt  RayTracingPipeline.cpp  RayTracingPipeline.h  TaskLoader.cpp  TaskLoader.h
Scene/: CMakeLists.txt  SceneConfiguration.cpp  SceneConfiguration.h  SceneLoader.cpp  SceneLoader.h  SceneProcessor.cpp  SceneProcessor.cu  SceneProcessor.h  SolarScene.cpp  SolarScene.h
Scene/DataStructure/Grid/: Grid.cu  Grid.cuh  RectangleGrid.cu  RectangleGrid.cuh
Scene/DataStructure/Heliostat/: FocusFlatRectangleHelio.cu  FocusFlatRectangleHelio.cuh  Heliostat.cu  Heliostat.cuh  RectangleHelio.cu  RectangleHelio.cuh
Scene/DataStructure/Receiver/: CylinderReceiver.cu  CylinderReceiver.cuh  Receiver.cu  Receiver.cuh  RectangleReceiver.cu  RectangleReceiver.cuh
Scene/DataStructure/Sunray/: Sunray.cu  Sunray.cuh
Tests/: CMakeLists.txt
Tests/DataStructureTests/: CMakeLists.txt  CylinderReceiverTest.cpp  DataStructureUtil.h  FocusFlatRectangleHelioTest.cpp  RectangleGridTest.cpp  RectangleHelioTest.cpp  SceneConfigurationTest.cpp  SceneLoaderTest.cpp  SceneProcessorTest.cpp
Tests/DataStructureTests/test_file/: test_configuration.json  test_invalid_configuration.json  test_partial_configuration.json  test_scene_bad_corresponding.scn  test_scene_bad_corresponding2.scn  test_scene_bad_nonRE.scn  test_scene_bad_unknownFields.scn  test_scene_good_for_focusFlatRectangleHelio.scn
Tests/QuasiMonteCarloRayTracingTests/: CMakeLists.txt  NewTestHeliostatForTest.cpp  NewTypeHeliostatForTest.h  QuasiMonteCarloRayTracerTest.cpp  cylinderReceiverIntersectionText.cpp  receiverIntersectUtil.cpp  receiverIntersectUtil.h
Tests/QuasiMonteCarloRayTracingTests/test_file/: test_configuration.json  test_configuration2.json  test_scene.scn  test_scene_cylinder_receiver.scn
Tests/RayTracingPipelineTests/: CMakeLists.txt  TaskLoaderTest.cpp
Tests/RayTracingPipelineTests/test_file/: example_configuration.json  example_scene.scn  taskLoadWithLessThanNIndexes.txt  taskLoadWithMoreThanNIndexes.txt
Tests/ToolTests/: ArgumentParserTest.cpp  CMakeLists.txt  HeliostatIndexGeneratorTest.cpp  ImageSaverTest.cpp  RandomGeneratorCPUTest.cpp  RandomGeneratorGPUTest.cpp  RegularExpressionTreeTest.cpp
Tests/ToolTests/test_file/: test_configuration.json  test_scene.scn
Tool/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt
Tool/FileLoader/: CMakeLists.txt  RegularExpressionTree.cpp  RegularExpressionTree.h
Tool/HeliostatIndexGenerator/: CMakeLists.txt  GenerateHeliostatIndex.cpp  GenerateHeliostatIndex.h
Tool/ImageSaver/: CMakeLists.txt  ImageSaver.cpp  ImageSaver.h
Tool/RandomNumberGenerator/: CMakeLists.txt  RandomGenerator.cpp  RandomGenerator.cu  RandomGenerator.cuh
Tool/Smoother/: CMakeLists.txt  ImageSmoother.cu  ImageSmoother.cuh  heap.cuh
Util/: check_cuda.h  destroy.h  global_constant.h  global_function.cuh  vector_arithmetic.cuh
